--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -114,6 +115,21 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li><a href=""><img src="./images/img-min.jpg" alt="Banking App" height="300" width="360"></a><h3>Banking App</h3></li>
+          <li><a href=""><img src="./images/img (1)-min.jpg" alt="Cashless Payment" height="300" width="360"></a><h3>Cashless Payment</h3></li>
+          <li><a href=""><img src="./images/img (2)-min.jpg" alt="Meditation App" height="300" width="360"></a><h3>Meditation App</h3></li>
+          <li><a href=""><img src="./images/img (3)-min.jpg" alt="Taxi Service" height="300" width="360"></a><h3>Taxi Service</h3></li>
+          <li><a href=""><img src="./images/img (4)-min.jpg" alt="Screen Illustrations" height="300" width="360"></a><h3>Screen Illustrations</h3></li>
+          <li><a href=""><img src="./images/img (5)-min.jpg" alt="Online Courses" height="300" width="360"></a><h3>Online Courses</h3></li>
+
+        </ul>
+      </section>
+
+
+      
     </main>
 
     <footer>
