--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
     <header>
         <nav class="menu">
-      <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
+      <a class="logo" href="./index.html">Web<span class="studio">Studio</span></a>
       
         <ul class="menu-navigation">
           <li class="menu-item">
-            <a class="menu-link" href="">Studio</a>
+            <a class="menu-link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
             <a class="menu-link" href="">Portfolio</a>
@@ -43,7 +43,7 @@
         <button class="header-order-btn" type="button" >Order Service</button>
       </section>
       <section>
-        <h2 class="visually-hidden">Hidden Header</h2>
+        <h2 hidden>Hidden Header</h2>
         <ul class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantages-name">Strategy</h3>
@@ -125,12 +125,12 @@
       <section class="portfolio">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul>
-          <li class="portfolio-item"><img src="./images/img-min.jpg" alt="Banking App" height="300" width="360"></a><h3 class="portfolio-name">Banking App</h3><p class="porfolio-name-descr">App</p></li>
-          <li class="portfolio-item"><img src="./images/img (1)-min.jpg" alt="Cashless Payment" height="300" width="360"><h3 class="portfolio-name">Cashless Payment</h3><p class="porfolio-name-descr">Marketing</p></li>
-          <li class="portfolio-item"><img src="./images/img (2)-min.jpg" alt="Meditation App" height="300" width="360"><h3 class="portfolio-name">Meditation App</h3><p class="porfolio-name-descr">App</p></li>
-          <li class="portfolio-item"><img src="./images/img (3)-min.jpg" alt="Taxi Service" height="300" width="360"><h3 class="portfolio-name">Taxi Service</h3><p class="porfolio-name-descr">Marketing</p></li>
-          <li class="portfolio-item"><img src="./images/img (4)-min.jpg" alt="Screen Illustrations" height="300" width="360"><h3 class="portfolio-name">Screen Illustrations</h3><p class="porfolio-name-descr">Design</p></li>
-          <li class="portfolio-item"><img src="./images/img (5)-min.jpg" alt="Online Courses" height="300" width="360"><h3 class="portfolio-name">Online Courses</h3><p class="porfolio-name-descr">Marketing</p></li>
+          <li class="portfolio-item"><img src="./images/banking_app.jpg" alt="Banking App" height="300" width="360"><h3 class="portfolio-name">Banking App</h3><p class="porfolio-name-descr">App</p></li>
+          <li class="portfolio-item"><img src="./images/cashless_payment.jpg" alt="Cashless Payment" height="300" width="360"><h3 class="portfolio-name">Cashless Payment</h3><p class="porfolio-name-descr">Marketing</p></li>
+          <li class="portfolio-item"><img src="./images/meditation_app.jpg" alt="Meditation App" height="300" width="360"><h3 class="portfolio-name">Meditation App</h3><p class="porfolio-name-descr">App</p></li>
+          <li class="portfolio-item"><img src="./images/taxi_service.jpg" alt="Taxi Service" height="300" width="360"><h3 class="portfolio-name">Taxi Service</h3><p class="porfolio-name-descr">Marketing</p></li>
+          <li class="portfolio-item"><img src="./images/screen_illustrations.jpg" alt="Screen Illustrations" height="300" width="360"><h3 class="portfolio-name">Screen Illustrations</h3><p class="porfolio-name-descr">Design</p></li>
+          <li class="portfolio-item"><img src="./images/online_courses.jpg" alt="Online Courses" height="300" width="360"><h3 class="portfolio-name">Online Courses</h3><p class="porfolio-name-descr">Marketing</p></li>
 
         </ul>
       </section>
@@ -140,7 +140,7 @@
     </main>
 
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"><span class="web">Web</span>Studio</a>
+      <a class="logo" href="./index.html">Web<span class="footer-studio">Studio</span></a>
       <p class="footer-descr">
         Increase the flow of customers and<br> sales for your business with digital<br>
       marketing & growth solutions.
