--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </nav>
       <address class="contacts">
         <ul class="contacts-list">
-          <li class="contacts-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="contacts-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="contacts-item"><a class="contacts-element" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="contacts-item"><a class="contacts-element" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
